--- a/about.qmd
+++ b/about.qmd
@@ -3,7 +3,11 @@ title: "About Me"
 image: /media/headshot.jpeg
 ---
 
-I'm currently a doctoral student at Texas A&M University studying Statistics. My research interests are in Bayesian Nonparametric models, particularly with applications in spatial statistics and constrained parameter situations. I focus more on developing methodology for applied data science and computation than statistical theory.
+I'm currently a doctoral student at Texas A&M University studying
+Statistics. My research interests are in Bayesian Nonparametric models,
+particularly with applications in spatial statistics and constrained
+parameter situations. I focus more on developing methodology for applied
+data science and computation than statistical theory.
 
 ## Education
 
@@ -20,7 +24,7 @@ I'm currently a doctoral student at Texas A&M University studying Statistics. My
 
 **Shell USA** \| Remote
 
-*Data Scientist* \| February 2022 - Present
+*Data Scientist* \| February 2022 - December 2022
 
 **Texas A&M University Statistics** \| College Station, TX
 
